Trocando ícones, renomeando aplicativo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Pão Diário Lite</string>
+    <string name="app_name">PayPaxx Web Meus Cartões</string>
     <string name="action_settings">Settings</string>
 </resources>
